# docu-store

./: .env.example  .env.prod.example  .gitignore  Makefile  README.md  TESTING.md  TESTING_QUICK_REFERENCE.md  WORKER_SETUP.md  docker-compose.infra.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
services/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  coverage.xml  docker-compose-langfuse.yml  docker-compose.yml  main.py  pyproject.toml
services/.claude/: settings.json
services/application/dtos/: artifact_dtos.py  blob_dtos.py  browse_dtos.py  chat_dtos.py  cser_dtos.py  embedding_dtos.py  health_dtos.py  page_dtos.py  parsed_document.py  pdf_dtos.py  permission_dtos.py  search_dtos.py  smiles_embedding_dtos.py  stats_dtos.py  summarization_dtos.py  workflow_dtos.py
services/application/mappers/: __init__.py  artifact_mappers.py  page_mappers.py
services/application/plugins/: manifest.py  protocol.py  registry.py
services/application/policies/: __init__.py  blob_uploaded_policy.py
services/application/ports/: analytics_read_model.py  blob_store.py  chat_agent.py  chat_repository.py  compound_vector_store.py  cser_service.py  document_parser.py  embedding_generator.py  external_event_publisher.py  llm_client.py  office_converter.py  pdf_service.py  permission_registrar.py  pipeline_orchestrator.py  prompt_repository.py  reranker.py  smiles_validator.py  structured_extractor.py  summary_vector_store.py  system_health_checker.py  text_chunker.py  title_extractor.py  tool_calling_llm.py  vector_store.py  worker_heartbeat_store.py  workflow_orchestrator.py
services/application/sagas/: __init__.py  artifact_upload_saga.py
services/application/use_cases/: __init__.py  _guards.py  aggregate_artifact_tags_use_case.py  artifact_use_cases.py  batch_reembed_use_cases.py  blob_use_cases.py  chat_use_cases.py  compound_use_cases.py  embedding_use_cases.py  extract_document_metadata_use_case.py  extract_page_entities_use_case.py  page_use_cases.py  parse_artifact_use_case.py  search_use_cases.py  smiles_embedding_use_cases.py  smiles_search_use_cases.py  storage_keys.py  summarization_use_cases.py  summary_embedding_use_cases.py  system_health_use_case.py
services/application/workflow_use_cases/: log_artifcat_sample_use_case.py  trigger_artifact_parse_use_case.py  trigger_artifact_summarization_use_case.py  trigger_artifact_summary_embedding_use_case.py  trigger_bulk_reembed_use_case.py  trigger_compound_extraction_use_case.py  trigger_doc_metadata_extraction_use_case.py  trigger_embedding_use_case.py  trigger_page_summarization_use_case.py  trigger_page_summary_embedding_use_case.py  trigger_smiles_embedding_use_case.py
services/design_docs/: ADDING_SERVICES.md  ARCHITECTURE_DIAGRAMS.md  CHAT_REASONING_CONTROLS.md  CHAT_REASONING_DISCLOSURE.md  COMPOUND_EXTRACTION.md  DOCLING_ENRICHMENT.md  DOCLING_ENRICHMENT_PLAN.md  DOCLING_PHASE_D_TABLE_GROUNDING.md  DOCLING_PHASE_D_TABLE_GROUNDING_PLAN.md  FILE_STRUCTURE.md  IMPLEMENTATION_SUMMARY.md  MULTI_FORMAT_INGESTION.md  MULTI_FORMAT_INGESTION_PLAN.md  MULTI_PROVIDER_LLM.md  PAGE_SUMMARIZATION.md  PIPELINE_ARCHITECTURE.md  PLUGIN_ARCHITECTURE.md  PPTX_INGESTION.md  SEARCH_PIPELINE_WHITEPAPER.md  SUMMARY_EMBEDDINGS_AND_SEARCH.md  TESTING_QUICK_REFERENCE.md  WORKER_SETUP.md
services/domain/: __init__.py  exceptions.py
services/domain/aggregates/: artifact.py  blob.py  page.py
services/domain/services/: __init__.py  bioactivity_reducer.py  tag_mention_aggregator.py
services/domain/value_objects/: __init__.py  artifact_type.py  author_mention.py  blob_ref.py  compound_mention.py  embedding_metadata.py  extraction_metadata.py  mime_type.py  presentation_date.py  tag_mention.py  text_chunk.py  text_embedding.py  text_mention.py  workflow_state.py  workflow_status.py
services/infrastructure/: auth.py  config.py  logging.py  pipeline_worker.py  read_worker.py
services/infrastructure/blob_stores/: __init__.py  fsspec_blob_store.py
services/infrastructure/chat/: agent.py  context_builder.py  models.py  mongo_chat_repository.py  retrieval_accumulator.py  thinking_agent.py  thinking_agent_v1.py  utils.py
services/infrastructure/chemistry/: rdkit_smiles_validator.py  smiles_detector.py
services/infrastructure/cser/: cser_pipeline_service.py
services/infrastructure/di/: container.py
services/infrastructure/embeddings/: __init__.py  chemberta_generator.py  sentence_transformer_generator.py  tfidf_sparse_generator.py
services/infrastructure/event_projectors/: artifact_projector.py  event_projector.py  page_projector.py  policy_dispatcher.py
services/infrastructure/event_sourced_repositories/: artifact_repository.py  blob_repository.py  page_repository.py
services/infrastructure/file_services/: docling_parser.py  font_title_extractor.py  libreoffice_converter.py  py_mu_pfd_service.py  py_pfd_service.py  segmentation.py
services/infrastructure/health/: gpu_info.py  health_checker.py  heartbeat_reader.py  heartbeat_reporter.py
services/infrastructure/kafka/: __init__.py  kafka_external_event_streamer.py
services/infrastructure/lib/: mongo_read_model_tracking.py  pipeline_worker_tracking.py
services/infrastructure/llm/: factory.py  model_builder.py  reasoning_context.py  token_counter.py
services/infrastructure/ner/: gliner2_extractor.py
services/infrastructure/permissions/: sentinel_permission_registrar.py
services/infrastructure/plugins/: context.py  loader.py  plugin_consumer.py
services/infrastructure/read_repositories/: mongo_analytics_store.py  mongo_read_model_materializer.py  mongo_read_repository.py  read_model_materializer.py
services/interfaces/: dependencies.py
services/reviews/: code_review.md
services/scripts/: backfill_artifact_qdrant_metadata.py  backfill_page_workspace_scope.js  backfill_thumbnails.py  demo_temporal_pdf_workflow.py  docling_vs_pymupdf.py  reembed_docling_enrichment.py  reembed_sparse_vectors.py  seed_langfuse_prompts.py
services/temporal-config/: development-sql.yaml  docker.yaml
services/tests/: conftest.py  mocks.py  pytest.ini
(+379 files in other folders)
